[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "PySink"
version = "0.0.8"
authors = [
  { name="Zack Johnson", email="zackjohnson298@gmail.com" },
]
description = "PySide6 helpers for powerful, asynchronous Desktop Applications"
license = "MIT"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Development Status :: 1 - Planning",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Operating System :: Unix",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
]
dependencies = ['pyside6']
keywords=['python', 'app', 'gui', 'async', 'application', 'desktop', 'ui']
[project.urls]
"Homepage" = "https://github.com/zackjohnson298/PySink"
"Bug Tracker" = "https://github.com/zackjohnson298/PySink/issues"
#"Docs" = "pysink.readthedocs.io/en/latest"