[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "PySink"
dynamic = ["version"]
description = 'PySide6 Helpers for Powerful Async Desktop Apps'
readme = "README.md"
authors = [{ name = "Zack Johnson", email = "zackjohnson298@gmail.com" }]
license = { file = "LICENSE" }
classifiers = [
    "Development Status :: 1 - Planning",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Operating System :: Unix",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
]
keywords = ['python', 'app', 'gui', 'async', 'application', 'desktop', 'ui']
dependencies = [
    'pyside6'
]
requires-python = ">=3.9"

[tool.setuptools.dynamic]
version = {attr = "PySink.__version__"}
